--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,11 @@
+0.5.0dev
+- ISSUE-18: add a catch-all filter (enabled with `-a` or `--catch-all`) which
+  force the application to output all the lines of the file.  Moreover, the
+  lines matching filters expressions, will be highlighted as well
+- ISSUE-15: remember last user directory while opening the file chooser dialog
+  multiple times
+- ISSUE-16: add a popup menu entry which disable the *scroll on output* behavior
+
 0.4.0dev (2012-09-22)
 - Fix a bug where matched strings were not colored when the number of filters
   was greater than the size of the color palette
